--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div class="about__media reveal">
           <!-- Replace with your demo thumbnail or GIF -->
           <figure class="media">
-            <img loading="lazy" src="assets/demo-terraform.jpg" alt="Terraform automation demo" />
+            <img loading="lazy" src="asset/cloudzee_logo.png" alt="Terraform automation demo" />
             <figcaption>Terraform automation demo: multi-env deployment with approvals.</figcaption>
           </figure>
         </div>
