--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div class="about__media reveal">
           <!-- Replace with your demo thumbnail or GIF -->
           <figure class="media">
-            <img loading="lazy" src="asset/cloudzee_logo.png" alt="Terraform automation demo" />
+            <img loading="lazy" src="assets/Terraform Multi-Env Deployment Overview.png" alt="Terraform automation demo" />
             <figcaption>Terraform automation demo: multi-env deployment with approvals.</figcaption>
           </figure>
         </div>
@@ -263,7 +263,7 @@
   <footer class="site-footer">
     <div class="container footer__inner">
       <div class="footer__brand">
-        <img src="assets/logo-cloudzee.svg" alt="Cloudzee logo" width="28" height="28" />
+        <img src="assets/cloudzee_logo.png" alt="Cloudzee logo" width="28" height="28" />
         <strong>CLOUDZEE</strong>
       </div>
       <nav class="footer__nav">
