--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
   <footer class="site-footer">
     <div class="container footer__inner">
       <div class="footer__brand">
-        <img src="assets/cloudzee_logo.png" alt="Cloudzee logo" width="28" height="28" />
+        <img src="https://zee123511.github.io/Cloudzee/asset/cloudzee_logo.png" alt="Cloudzee logo" width="28" height="28" />
         <strong>CLOUDZEE</strong>
       </div>
       <nav class="footer__nav">
