--- a/index.html
+++ b/index.html
@@ -9,12 +9,22 @@
   <link rel="canonical" href="https://www.cloudzee.dev/" />
 
   <!-- Open Graph / Twitter -->
+  <!-- Favicon -->
+  <link rel="icon" href="asset/favicon.ico" type="image/x-icon">
+  
+  <!-- Open Graph / LinkedIn / Facebook -->
   <meta property="og:title" content="CLOUDZEE — DevOps Service Provider" />
-  <meta property="og:description" content="Kubernetes, Terraform, CI/CD, cost optimization, backup/DR." />
+  <meta property="og:description" content="Kubernetes • Terraform • CI/CD • Cloud Cost Optimization • Backup & DR" />
+  <meta property="og:image" content="https://zee123511.github.io/Cloudzee/asset/og-image.png" />
+  <meta property="og:url" content="https://zee123511.github.io/Cloudzee/" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.cloudzee.dev/" />
-  <meta property="og:image" content="assets/og-image.jpg" />
+  
+  <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="CLOUDZEE — DevOps Service Provider" />
+  <meta name="twitter:description" content="Helping startups and enterprises optimize cloud costs & automate DevOps pipelines." />
+  <meta name="twitter:image" content="https://zee123511.github.io/Cloudzee/asset/og-image.png" />
+
 
   <!-- SEO extras -->
   <meta name="robots" content="index,follow" />
