--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="about__media reveal">
           <!-- Replace with your demo thumbnail or GIF -->
           <figure class="media">
-            <img loading="lazy" src="assets/Terraform Multi-Env Deployment Overview.png" alt="Terraform automation demo" />
+            <img loading="lazy" src="assets/Terraform Multi-Env Deployment Overview.png" />
           </figure>
         </div>
       </div>
