--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
       <nav class="footer__nav">
         <a href="https://github.com/zee123511/Cloudzee.git" target="_blank" rel="noopener">GitHub</a>
         <a href="https://www.linkedin.com/in/zeeshan-khan12/" target="_blank" rel="noopener">LinkedIn</a>
-        <a href="mailto:cloudzee2024@outlook.com">hello@cloudzee.dev</a>
+        <a href="mailto:cloudzee2024@outlook.com">cloudzee2024@gmail.com</a>
       </nav>
       <p class="muted">© <span id="year"></span> CLOUDZEE. All rights reserved.</p>
     </div>
