--- a/index.html
+++ b/index.html
@@ -317,6 +317,8 @@
         <button class="btn" type="submit">Submit review</button>
         <p id="review-status" class="form__status" role="status" aria-live="polite"></p>
       </form>
+      <h3 style="margin-top:2rem">Customer Reviews</h3>
+      <div id="reviews-list" class="reviews-list grid testimonials"></div>
     </div>
   </section>
 
