--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CLOUDZEE — DevOps Service Provider | Cloud, Kubernetes, Terraform, CI/CD</title>
   <meta name="description" content="CLOUDZEE helps startups and enterprises with Cloud & DevOps: Kubernetes (AKS/EKS/GKE), Terraform IaC, CI/CD (GitHub Actions, Jenkins, Azure DevOps), cost optimization, and backup/DR." />
-  <link rel="canonical" href="https://www.cloudzee.dev/" />
+  <link rel="canonical" href="https://cloudzee-devops.github.io/Cloudzee/" />
 
   <!-- Open Graph / Twitter -->
   <!-- Favicon -->
@@ -15,20 +15,20 @@
   <!-- Open Graph / LinkedIn / Facebook -->
   <meta property="og:title" content="CLOUDZEE — DevOps Service Provider" />
   <meta property="og:description" content="Kubernetes • Terraform • CI/CD • Cloud Cost Optimization • Backup & DR" />
-  <meta property="og:image" content="https://zee123511.github.io/Cloudzee/asset/og-image.png" />
-  <meta property="og:url" content="https://zee123511.github.io/Cloudzee/" />
+  <meta property="og:image" content="https://cloudzee-devops.github.io/Cloudzee/asset/og-image.png" />
+  <meta property="og:url" content="https://cloudzee-devops.io/Cloudzee/" />
   <meta property="og:type" content="website" />
   
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="CLOUDZEE — DevOps Service Provider" />
   <meta name="twitter:description" content="Helping startups and enterprises optimize cloud costs & automate DevOps pipelines." />
-  <meta name="twitter:image" content="https://zee123511.github.io/Cloudzee/asset/og-image.png" />
+  <meta name="twitter:image" content="https://cloudzee-devops.github.io/Cloudzee/asset/og-image.png" />
 
 
   <!-- SEO extras -->
   <meta name="robots" content="index,follow" />
-  <link rel="icon" href="assets/favicon.svg" />
+  <link rel="icon" href="assets/favicon.ico" />
 
   <!-- Fonts (optional) -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -47,11 +47,11 @@
     "@context": "https://schema.org",
     "@type": "ProfessionalService",
     "name": "CLOUDZEE",
-    "url": "https://www.cloudzee.dev/",
-    "logo": "https://www.cloudzee.dev/assets/logo-cloudzee.svg",
+    "url": "https://cloudzee-devops.github.io/Cloudzee/",
+    "logo": "https://cloudzee-devops.github.io/Cloudzee/assets/logo-cloudzee.svg",
     "sameAs": [
-      "https://github.com/your-github",
-      "https://www.linkedin.com/in/your-linkedin/"
+      "https://github.com/cloudzee-devops",
+      "https://www.linkedin.com/in/zeeshan-khan12/"
     ],
     "areaServed": "Worldwide",
     "serviceType": [
@@ -327,7 +327,7 @@
   <footer class="site-footer">
     <div class="container footer__inner">
       <div class="footer__brand">
-        <img src="https://zee123511.github.io/Cloudzee/asset/cloudzee_logo.png" alt="Cloudzee logo" width="28" height="28" />
+        <img src="https://Cloudzee-DevOps.github.io/Cloudzee/asset/cloudzee_logo.png" alt="Cloudzee logo" width="28" height="28" />
         <strong>CLOUDZEE</strong>
       </div>
       <nav class="footer__nav">
