--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
       </div>
       <nav class="footer__nav">
         <a href="https://www.linkedin.com/in/zeeshan-khan12/" target="_blank" rel="noopener">LinkedIn</a>
-        <a href="mailto:cloudzee2024@outlook.com">cloudzee2024@gmail.com</a>
+        <a href="mailto:cloudzee2024@outlook.com">Mail Us</a>
       </nav>
       <p class="muted">© <span id="year"></span> CLOUDZEE. All rights reserved.</p>
     </div>
