--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         <strong>CLOUDZEE</strong>
       </div>
       <nav class="footer__nav">
-        <a href="https://www.linkedin.com/in/zeeshan-khan12/" target="_blank" rel="noopener">LinkedIn</a>
+        <a href="https://www.linkedin.com/company/cloudzee-devops" target="_blank" rel="noopener">LinkedIn</a>
         <a href="mailto:cloudzee2024@outlook.com">Mail Us</a>
       </nav>
       <p class="muted">© <span id="year"></span> CLOUDZEE. All rights reserved.</p>
