--- a/index.html
+++ b/index.html
@@ -202,19 +202,19 @@
         <article class="card reveal">
           <h3>AKS Multi-Cluster Automation</h3>
           <p>Automated provisioning of AKS across subscriptions with Helm-based app rollout and centralized logging.</p>
-          <a class="card__link" href="https://github.com/your-github/aks-automation" target="_blank" rel="noopener">View on GitHub →</a>
+          <a class="card__link" href="" target="_blank" rel="noopener">View on GitHub →</a>
         </article>
 
         <article class="card reveal">
           <h3>Terraform Modules for Azure</h3>
           <p>Opinionated modules for VNet, AKS, Key Vault, and PostgreSQL—tested with Terratest and CI.</p>
-          <a class="card__link" href="https://github.com/your-github/terraform-azure-modules" target="_blank" rel="noopener">View on GitHub →</a>
+          <a class="card__link" href="" target="_blank" rel="noopener">View on GitHub →</a>
         </article>
 
         <article class="card reveal">
           <h3>Backup & DR for VMs</h3>
-          <p>Enabled Azure Backup across mixed RGs via Ansible AAP with policy mapping and reporting.</p>
-          <a class="card__link" href="https://github.com/your-github/aap-backup" target="_blank" rel="noopener">View on GitHub →</a>
+          <p>Enabled Azure Backup across mixed RGs via Ansible AAP</p>
+          <a class="card__link" href="https://github.com/Cloudzee-DevOps/Enabling-azure-backups-with-Ansible-Automation-Platform.git" target="_blank" rel="noopener">View on GitHub →</a>
         </article>
       </div>
     </div>
@@ -317,7 +317,7 @@
         <button class="btn" type="submit">Submit review</button>
         <p id="review-status" class="form__status" role="status" aria-live="polite"></p>
       </form>
-      <h3 style="margin-top:2rem">Customer Reviews</h3>
+      <h3 style="margin-top:2rem">Client Reviews</h3>
       <div id="reviews-list" class="reviews-list grid testimonials"></div>
     </div>
   </section>
