--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
       <h2 class="section__title">Case Studies & Projects</h2>
       <div class="grid cards">
         <article class="card reveal">
-          <h3>AKS Multi-Cluster Automation</h3>
-          <p>Automated provisioning of AKS across subscriptions with Helm-based app rollout and centralized logging.</p>
-          <a class="card__link" href="" target="_blank" rel="noopener">View on GitHub →</a>
+          <h3>3 tier architecture </h3>
+          <p>Automated provisioning of 3 tier architecture in azure through Terraform and Ansible.</p>
+          <a class="card__link" href="https://github.com/Cloudzee-DevOps/azure-3tier-aks-agw-firewall.git" target="_blank" rel="noopener">View on GitHub →</a>
         </article>
 
         <article class="card reveal">
