--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
       <a href="#services">Services</a>
       <a href="#about">About</a>
       <a href="#projects">Case Studies</a>
+      <a href="blog.html">Blog</a>
       <a href="#contact" class="btn btn--small">Contact</a>
     </nav>
   </header>
